# jinjardf

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
_includes/: head-custom.html
berlinonline/jinjardf/: helper.py  rdf_environment.py  rdf_filters.py  site_generator.py  theme.py
berlinonline/jinjardf/tests/: __init__.py  test_filters.py  test_helpers.py  test_site_generator.py  test_theme.py
berlinonline/jinjardf/tests/config/: multiple_types.yml  no_base_url.yml  only_base_url.yml  things.yml  things_with_prefixes.yml  types.yml
berlinonline/jinjardf/tests/data/: bnodes.ttl  data.ttl  ducks.nt  ducks.ttl  literals.ttl  multiple_types.ttl  things.ttl  types.ttl
berlinonline/jinjardf/tests/templates/: animal.html.jinja  base.html.jinja  dataset.html.jinja  default.html.jinja  dog.html.jinja  event.html.jinja  typeA.html.jinja  typeB.html.jinja
berlinonline/jinjardf/tests/theme_a/assets/: style.css
berlinonline/jinjardf/tests/theme_a/config/: config.yml
berlinonline/jinjardf/tests/theme_a/templates/: base.html.jinja  default.html.jinja
doc/: rdf_environment.md  rdf_filters.md  site_generator.md  theme.md
