[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja-rdf"
version = "0.0.1"
authors = [
  { name="Knud Möller", email="knud.moeller@berlinonline.de" },
]
description = "Jinja2 filter for rdflib nodes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/berlinonline/jinja-rdf"
Issues = "https://github.com/berlinonline/jinja-rdf/issues"