[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja-rdf"
version = "0.0.1"
authors = [
  { name="Knud Möller", email="knud.moeller@berlinonline.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
description = "Jinja2 filter for rdflib nodes"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "jinja2",
  "pyyaml",
  "rdflib",
  "progressbar2",
]

[project.urls]
Homepage = "https://github.com/berlinonline/jinja-rdf"
Issues = "https://github.com/berlinonline/jinja-rdf/issues"